# lem-in

./: CMakeLists.txt  Makefile  README.md  lem-in  make  out  visu-hex  visu-hex.ini
includes/: ft_lem-in.h  ft_lem_in.h  lem_in.h  mlx_keys.h
inputs/: input14  input15  input16  input17  input20
lem_in.dSYM/Contents/Resources/DWARF/: lem_in
libft/: Makefile
libft/includes/: libft.h
libft/src/: ft_cleaner.c
libftprintf/: Makefile
libftprintf/includes/: ft_printf.h  get_next_line.h
libftprintf/src/ft_printf/: pf_set_task.c
libftprintf/src/gnl/: clear_fd_node.c  get_next_line.c
libftprintf/src/libft/: ft_lstdel.c  ft_lstsort.c  ft_lstswap.c  ft_strcmp.c  ft_strnew.c  ft_swap.c  libft.h
maps/: 2-1  2-2  42  david  eight  father1  father2  father3  father4  father5  father6  multi_put  way  wiki_map
src/: ft_bfs_helper.c  ft_cons.c  ft_create_map.c  ft_create_matrix.c  logo2.xpm  main.c  rooms.c
src/common/: debug.c  debug2.c  find_functions.c  free_functions.c  get_ants.c  get_door.c  get_room.c  get_sharp.c  name_cmp.c  parce_map.c  push_back.c  read_name.c
src/lem-in/: bfs.c  choose_way_and_ant.c  get_ways.c  independent_ways.c  lem_in.c  lem_in_clear_exit.c  queue.c  send_ants.c  ways.c
src/visu-hex/: draw_functions.c  gradient.c  init_map.c  init_map_functions.c  init_ways.c  key_handle.c  parce_ants.c  parce_flags.c  put_functions.c  put_usage.c  render.c  render_ants.c  render_info.c  render_map.c  validate_iterations.c  validate_path_merge.c  validate_room_merge.c  visu_hex.c  visu_hex_clear_exit.c  visualisation_init.c
v_checker/: Makefile  v_checker.ini
v_checker/includes/: v_checker.h
v_checker/invalid_input/lem-in/: bad_ants  bad_ants2  bad_ants3  bad_ants4  bad_ants5  bad_command  bad_command2  bad_crd  bad_crd2  bad_crd3  bad_line  bad_link  bad_link10  bad_link2  bad_link3  bad_link4  bad_link5  bad_link6  bad_link7  bad_link8  bad_link9  bad_room  bad_room_name  empty_line  no_ants  no_end  no_room_after_cmd  no_start  no_start_end  not_int  two_end  two_end2  two_start  two_start2
v_checker/src/: valid_checker.c
